--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
         <ul>
             <li>Work</li>  
             <li><a href="About.html">About</a></li>   
-            <li><a href="Blog.html">Blog</a></li>  
-            <li>Gallery</li>   
+            <li><a href="Blog.html">Blog</a></li>    
             <li><a href="Contact.html">Contact</a></li>   
         </ul>
 
@@ -24,6 +23,9 @@
           <a href="transcript.html">.</a>
         </div>
 
+        <div id="cruiser">
+          <img src="images/cruiser.png" alt="a transparent image of a 60 series landcruiser from the side">
+        </div>
 
         
 </body>
