--- a/Blog.html
+++ b/Blog.html
@@ -323,6 +323,23 @@
     </div>
 
     <div id="post">
+        <img src="images/houseplan.jfif">
+    <h2>
+    23/05/2014
+    </h2>
+
+    <p>
+    Something I've been playing around with: randomly generated houseplans! Basically I give someone
+     (the less informed the better) and asking them to direct my hand as I draw, offering instructions
+      like 'two up', 'seven down' going along the grid. Surprisingly, most of the shapes end up closed.
+      Afterwards, we go back over in pen to turn it into a house plan. It's really interesting to see
+      how the rooms fit into the closed shape, what hallways form, what areas are focussed on - I think there's 
+      a little bit of 'house' in every shape!
+    </p>
+
+    </div>
+
+    <div id="post">
         <img src="images/whiteboard.png">
     <h2>
     13/05/2014
@@ -330,6 +347,25 @@
 
     <p>
     Not sure this one's road safe but its definitely cuter. 
+    </p>
+
+    </div>
+
+    <div id="post">
+        <img src="images/piper.png">
+    <h2>
+    10/04/2014
+    </h2>
+
+    <p>
+    Big fan of this copy of the Pied Piper I found where the owner jammed his name
+    on the front cover? in big bold marker pen? and like its on the inside cover as well 
+    (in 10000px font) so I'm not sure what he expected to happen to the book where it would 
+    require a label claiming ownership on BOTH sides. But anyway. On one hand: hi, Wyatt!
+    On the other hand, this is a really cool look into this person's actions - the size of 
+    the text, the medium, the lack of care for the book (in the sense that he wrote all over it), and 
+    the fact that it's this book in particular. After Steve's shed I've been enjoying doing some 
+    detective work on men's domestic possessions.
     </p>
 
     </div>
