--- a/Blog.html
+++ b/Blog.html
@@ -142,7 +142,7 @@
     </div>
 <!--post about doing PHD/going to wv-->
 <div id="post">
-    <img src="images/cruiser.png">
+    <img src="images/cruisergallery2.png">
     <h2>
         20/11/2015
     </h2>
@@ -152,8 +152,7 @@
     exhibited at the Mulligan Gallery from the 13th of November to the 7th of January. It would mean 
     a lot to me if you could come down and see the work - we got a whole car into the gallery space!!
     Big thanks to Ben for technical help, Mum and Dad for putting up with having a car skeleton in their
-    driveway for a year, Kevin for moral support and for Pheobe for being a tech wizard and making
-    this into a transparent PNG. Couldn't have done it without everyone's help!
+    driveway for a year, Kevin for moral support and for Pheobe for taking all the pics! Couldn't have done it without everyone's help!
       
     </p>
     
